--- a/po/pl/kdvi.po
+++ b/po/pl/kdvi.po
@@ -1,9 +1,14 @@
+# KTranslator Generated File
+
+# mostly translated by Piotr Roszatycki <dexter@fnet.pl>
+#latest updates by Jacek Stolarczyk <jacek@mer.chemia.polsl.gliwice.pl>
+
 msgid ""
 msgstr ""
 "Project-Id-Version: kdvi \n"
 "POT-Creation-Date: 1998-06-18 22:44+0200\n"
-"PO-Revision-Date: 1998-01-22 23:13+0100\n"
-"Last-Translator: Piotr Roszatycki <dexter@fnet.com.pl>\n"
+"PO-Revision-Date: 1998-06-23 23:48+0200\n"
+"Last-Translator: Jacek Stolarczyk <jacek@mer.chemia.polsl.gliwice.pl>\n"
 "Content-Type: text/plain; charset=iso-8859-2\n"
 
 #: dviwin.cpp:216 dviwin.cpp:232 dviwin.cpp:246 dviwin.cpp:283 dviwin.cpp:300
@@ -71,7 +76,7 @@ msgstr "Prze³±cz pasek menu"
 #: kdvi.cpp:110
 #, fuzzy
 msgid "Mark page"
-msgstr "Zaznacz wszystkie"
+msgstr "Zaznacz stronê"
 
 #: kdvi.cpp:112
 #, fuzzy
@@ -81,7 +86,7 @@ msgstr "Przerysuj stronê"
 #: kdvi.cpp:114
 #, fuzzy
 msgid "Preferences ..."
-msgstr "&W³a¶ciwo¶ci..."
+msgstr "W³a¶ciwo¶ci..."
 
 #: kdvi.cpp:173
 msgid "&Open ..."
@@ -169,7 +174,7 @@ msgstr "Poka¿ paski prze&wijania"
 
 #: kdvi.cpp:238
 msgid "DVI Viewer"
-msgstr ""
+msgstr "Przegl±darka DVI"
 
 #: kdvi.cpp:240
 #, fuzzy
@@ -182,7 +187,7 @@ msgstr ""
 "\n"
 "Markku Hihnala <mah@ee.oulu.fi>\n"
 "Polskie t³umaczenie\n"
-"(C) 1997 Piotr Roszatycki"
+"(C) 1998 Piotr Roszatycki, Jacek Stolarczyk"
 
 #: kdvi.cpp:260
 msgid "Open document ..."
@@ -458,7 +463,7 @@ msgstr "Zaznacz aktualn±"
 
 #: marklist.cpp:39
 msgid "Unmark current"
-msgstr "Odeznacz aktualn±"
+msgstr "Odznacz aktualn±"
 
 #: marklist.cpp:40
 msgid "Mark all"
@@ -526,11 +531,11 @@ msgstr "¦cie¿ka PK Czcionek"
 
 #: prefs.cpp:301
 msgid "Shrink factor for small text"
-msgstr "Wspó³czynnik powiêkszenia dla ma³ego tekstu"
+msgstr "Wspó³cz. powiêkszenia dla ma³ego tekstu"
 
 #: prefs.cpp:306
 msgid "Shrink factor for large text"
-msgstr "Wspó³czynnik powiêkszenia dla du¿ego tekstu"
+msgstr "Wspó³cz. powiêkszenia dla du¿ego tekstu"
 
 #: prefs.cpp:326
 msgid "Show postscript specials"
@@ -673,10 +678,10 @@ msgid "Printing method"
 msgstr "Metoda wydruku"
 
 #~ msgid "&Previous"
-#~ msgstr "&Poprzedni"
+#~ msgstr "&Poprzednia"
 
 #~ msgid "&Next"
-#~ msgstr "&Nastêpny"
+#~ msgstr "&Nastêpna"
 
 #~ msgid "Appearance"
 #~ msgstr "Wygl±d"
