--- a/po/pl/kghostview.po
+++ b/po/pl/kghostview.po
@@ -1,9 +1,14 @@
+# KTranslator Generated File
+
+#mostly translated by Piotr Roszatycki <dexter@fnet.pl>
+#latest updates by Jacek Stolarczyk <jacek@mer.chemia.polsl.gliwice.pl>
+
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: kghostview\n"
 "POT-Creation-Date: 1998-06-18 22:44+0200\n"
-"PO-Revision-Date: 1998-01-09 00:50+0100\n"
-"Last-Translator: Piotr Roszatycki <dexter@fnet.com.pl>\n"
+"PO-Revision-Date: 1998-06-23 18:15+0200\n"
+"Last-Translator: Jacek Stolarczyk <jacek@mer.chemia.polsl.gliwice.pl>\n"
 "Content-Type: text/plain; charset=iso-8859-2\n"
 
 #: copyright.cpp:27
@@ -28,29 +33,29 @@ msgid ""
 "Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA."
 msgstr ""
 "\n"
-"This program is free software; you can redistribute it and/or modify\n"
-"it under the terms of the GNU General Public License as published by\n"
-"the Free Software Foundation; either version 2 of the License, or\n"
-"(at your option) any later version.\n"
+"Jest to program darmowy; mo¿na go rozpowszechniaæ i/lub modyfikowaæ\n"
+"zgodnie z GNU General Public License publikowan±\n"
+"przez Free Software Foundation; w wersji 2 Licencji lub\n"
+"(wedle w³asnego uznania) jakiejkolwiek pó¼niejszej.\n"
 "\n"
-"This program is distributed in the hope that it will be useful,\n"
-"but WITHOUT ANY WARRANTY; without even the implied warranty of\n"
-"MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n"
-"GNU General Public License for more details.\n"
+"Program jest udostepniany z nadziej±, ¿e oka¿e siê u¿yteczny\n"
+"ale BEZ JAKIEJKOLWIEK GWARANCJI; nawet bez wynikaj±cej gwarancji\n"
+"¿e bêdzie SPRZEDAWALNY lub bêdzie DOPASOWANY DO JAKIEGOKOLWIEK KONKRETNEGO CELU.\n"
+"Wiêcej szczegó³ów w GNU General Public License."
 "\n"
-"You should have received a copy of the GNU General Public License\n"
-"along with this program; if not, write to the Free Software\n"
+"Powiniene¶ by³ otrzymaæ kopie GNU General Public License\n"
+"razem z tym programem. Je¶li nie to napisz do Free Software\n"
 "Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA."
 
 #: goto.cpp:54
 #, fuzzy
 msgid "&Section"
-msgstr "Sekcja"
+msgstr "&Sekcja"
 
 #: goto.cpp:70
 #, fuzzy
 msgid "&Page"
-msgstr "Strona"
+msgstr "S&trona"
 
 #: goto.cpp:123 goto.cpp:130 goto.cpp:147 kghostview.cpp:2240
 #: kghostview.cpp:2252 kghostview.cpp:2257 kghostview.cpp:2540
@@ -65,11 +70,11 @@ msgstr "Plik :"
 
 #: info.cpp:53
 msgid "Document title :"
-msgstr ""
+msgstr "Tytu³ dokumentu :"
 
 #: info.cpp:61
 msgid "Publication date :"
-msgstr ""
+msgstr "Data publikacji :"
 
 #: interpreter.cpp:42
 msgid "General"
@@ -83,17 +88,17 @@ msgstr "Nazwa interpretera"
 #: interpreter.cpp:87
 #, fuzzy
 msgid "&Antialiasing"
-msgstr "Antyaliasing"
+msgstr "&Antyaliasing"
 
 #: interpreter.cpp:97
 #, fuzzy
 msgid "Platform &fonts"
-msgstr "Czcionki platformy"
+msgstr "&Czcionki platformy"
 
 #: interpreter.cpp:107
 #, fuzzy
 msgid "&Messages"
-msgstr "Komunikaty"
+msgstr "Ko&munikaty"
 
 #: interpreter.cpp:130
 msgid "Palette"
@@ -102,31 +107,31 @@ msgstr "Paleta"
 #: interpreter.cpp:152
 #, fuzzy
 msgid "Colo&r"
-msgstr "Kolor"
+msgstr "Kolo&r"
 
 #: interpreter.cpp:161
 #, fuzzy
 msgid "&Grayscale"
-msgstr "Stopnie szaro¶ci"
+msgstr "&Poziomy szaro¶ci"
 
 #: interpreter.cpp:169
 #, fuzzy
 msgid "Monochrom&e"
-msgstr "Czarno-bia³y"
+msgstr "Czarno-&bia³y"
 
 #: interpreter.cpp:192
 msgid "Backing"
-msgstr "Backing"
+msgstr "Przechowanie zawarto¶ci wy¶wietlonej strony"
 
 #: interpreter.cpp:214
 #, fuzzy
 msgid "&Pixmap"
-msgstr "Pixmap"
+msgstr "Jako bitma&pa"
 
 #: interpreter.cpp:224
 #, fuzzy
 msgid "&Backing store"
-msgstr "Backing store"
+msgstr "Wykorzystuj±c \"backing &store\" X serwera"
 
 #: interpreter.cpp:244 kkeydialog.cpp:233
 #, fuzzy
@@ -139,75 +144,75 @@ msgstr "gs"
 
 #: kaccel.cpp:169
 msgid "CTRL+O"
-msgstr ""
+msgstr "CTRL+O"
 
 #: kaccel.cpp:173
 msgid "CTRL+N"
-msgstr ""
+msgstr "CTRL+N"
 
 #: kaccel.cpp:177
 msgid "CTRL+W"
-msgstr ""
+msgstr "CTRL+W"
 
 #: kaccel.cpp:181
 msgid "CTRL+S"
-msgstr ""
+msgstr "CTRL+S"
 
 #: kaccel.cpp:185
 msgid "CTRL+P"
-msgstr ""
+msgstr "CTRL+P"
 
 #: kaccel.cpp:189
 msgid "CTRL+Q"
-msgstr ""
+msgstr "CTRL+Q"
 
 #: kaccel.cpp:193
 msgid "CTRL+X"
-msgstr ""
+msgstr "CTRL+X"
 
 #: kaccel.cpp:197
 msgid "CTRL+C"
-msgstr ""
+msgstr "CTRL+C"
 
 #: kaccel.cpp:201
 msgid "CTRL+V"
-msgstr ""
+msgstr "CTRL+V"
 
 #: kaccel.cpp:205
 msgid "CTRL+Z"
-msgstr ""
+msgstr "CTRL+Z"
 
 #: kaccel.cpp:209
 msgid "CTRL+F"
-msgstr ""
+msgstr "CTRL+F"
 
 #: kaccel.cpp:213
 msgid "CTRL+R"
-msgstr ""
+msgstr "CTRL+R"
 
 #: kaccel.cpp:216 kaccel.cpp:443
 msgid "Insert"
-msgstr ""
+msgstr "Insert"
 
 #: kaccel.cpp:217
 msgid "CTRL+Insert"
-msgstr ""
+msgstr "CTRL+Insert"
 
 #: kaccel.cpp:221
 msgid "CTRL+Home"
-msgstr ""
+msgstr "CTRL+Home"
 
 #: kaccel.cpp:224 kaccel.cpp:449
 msgid "End"
-msgstr ""
+msgstr "End"
 
 #: kaccel.cpp:225
 msgid "CTRL+End"
-msgstr ""
+msgstr "CTRL+End"
 
 #: kaccel.cpp:228 kaccel.cpp:229 kaccel.cpp:452
 msgid "Prior"
-msgstr ""
+msgstr "Poprzednia strona"
 
 #: kaccel.cpp:232 kaccel.cpp:233 kaccel.cpp:455
 #, fuzzy
@@ -216,16 +221,16 @@ msgstr "Nastêpna strona"
 
 #: kaccel.cpp:237
 msgid "F1"
-msgstr ""
+msgstr "F1"
 
 #: kghostview.cpp:199
 msgid "Document information"
-msgstr ""
+msgstr "Informacja o dokumencie"
 
 #: kghostview.cpp:213
 #, fuzzy
 msgid "Page Setup"
-msgstr "Nazwa drukarki"
+msgstr "Ustawienia strony"
 
 #: kghostview.cpp:353 kghostview.cpp:374 kghostview.cpp:443
 msgid "View Control"
@@ -253,11 +258,11 @@ msgstr "Poprzednia strona"
 
 #: kghostview.cpp:359 kghostview.cpp:380
 msgid "Scroll Up"
-msgstr "Przewiæ w górê"
+msgstr "Przewiñ w górê"
 
 #: kghostview.cpp:360 kghostview.cpp:381
 msgid "Scroll Down"
-msgstr "Przewiñ w do³"
+msgstr "Przewiñ w dó³"
 
 #: kghostview.cpp:361 kghostview.cpp:382
 msgid "Scroll Left"
@@ -273,7 +278,7 @@ msgstr "Od¶wie¿"
 
 #: kghostview.cpp:406 kghostview.cpp:408
 msgid "Not known"
-msgstr ""
+msgstr "NIeznany"
 
 #: kghostview.cpp:419
 msgid "Configure interpreter"
@@ -285,12 +290,12 @@ msgstr "&Otwórz..."
 
 #: kghostview.cpp:495
 msgid "Open &recent"
-msgstr ""
+msgstr "Otwórz poprz&edni"
 
 #: kghostview.cpp:503
 #, fuzzy
 msgid "Page Set&up ..."
-msgstr "&Otwórz..."
+msgstr "&Ustawienia strony..."
 
 #: kghostview.cpp:505
 msgid "&Print ..."
@@ -307,7 +312,7 @@ msgstr "Po&mniejsz"
 #: kghostview.cpp:517
 #, fuzzy
 msgid "&Zoom ..."
-msgstr "&Informacje..."
+msgstr "&Powiekszenie..."
 
 #: kghostview.cpp:522
 msgid "&Info ..."
@@ -327,11 +332,11 @@ msgstr "&Id¼ do strony..."
 
 #: kghostview.cpp:534
 msgid "Go to &start"
-msgstr "Id¼ na pocz±tek"
+msgstr "Id¼ na p&ocz±tek"
 
 #: kghostview.cpp:536
 msgid "Go to &end"
-msgstr "Id¼ na koniec"
+msgstr "Id¼ na &koniec"
 
 #: kghostview.cpp:538
 msgid "&Read down"
@@ -407,7 +412,7 @@ msgstr "&Zaznaczenie"
 
 #: kghostview.cpp:661
 msgid "New window ..."
-msgstr ""
+msgstr "Nowe okno ..."
 
 #: kghostview.cpp:664
 #, fuzzy
@@ -417,7 +422,7 @@ msgstr "&Otwórz..."
 #: kghostview.cpp:672
 #, fuzzy
 msgid "Print document ..."
-msgstr "Drukuj dokument"
+msgstr "Drukuj dokument ..."
 
 #: kghostview.cpp:677
 #, fuzzy
@@ -456,7 +461,7 @@ msgstr "Przesuñ w dó³"
 #: kghostview.cpp:707
 #, fuzzy
 msgid "Toggle this page mark"
-msgstr "Za&mieñ zaznaczenie stron"
+msgstr "Za&mieñ zaznaczenie strony"
 
 #: kghostview.cpp:729
 msgid "Sc.100 of 100  P.100 of 100"
@@ -540,7 +545,7 @@ msgstr ""
 
 #: kghostview.cpp:1584 kghostview.cpp:1700
 msgid "Error printing"
-msgstr ""
+msgstr "B³±d podczas drukowania"
 
 #: kghostview.cpp:1594
 msgid ""
@@ -549,23 +554,31 @@ msgid ""
 "that currently loaded into the viewer.\n"
 "There is no need to print all pages into a new file."
 msgstr ""
+"Mo¿esz wybraæ wydruk wszystkich stron do pliku.\n"
+"Powstanie w ten sposób dokument identyczny\n"
+"z aktualnie za³adowanym w przegl±darce.\n"
+"NIe ma potrzeby drukowania wszystkich stron do nowego pliku."
 
 #: kghostview.cpp:1607
 msgid ""
 "No file name was given so\n"
 "nothing could be printed to a file.\n"
 msgstr ""
+"Nie zosta³a podana nazwa pliku,\n"
+"dlatego nie mo¿na wydrukowaæ dokumentu do pliku.\n"
 
 #: kghostview.cpp:1665
 #, fuzzy, c-format
 msgid "Print failure : %s"
-msgstr "B³±d drukowania : lpr"
+msgstr "B³±d drukowania : %s"
 
 #: kghostview.cpp:1701
 msgid ""
 "Printing failed because the list of\n"
 "pages to be printed was empty.\n"
 msgstr ""
+"Drukowanie ni powiod³o siê, nie wybrano\n"
+"¿adnych stron do wydruku.\n"
 
 #: kghostview.cpp:2234 kghostview.cpp:2246 kghostview.cpp:2511
 #: kghostview.cpp:2534
@@ -589,12 +602,12 @@ msgstr "Sc.1 "
 
 #: kghostview.cpp:2513
 msgid "P.1 "
-msgstr "P.1 "
+msgstr "Str.1 "
 
 #: kghostview.cpp:2515 kghostview.cpp:2528
 #, c-format
 msgid "P.%d "
-msgstr "P.%d "
+msgstr "Str.%d "
 
 #: kghostview.cpp:2530
 #, c-format
@@ -603,16 +616,16 @@ msgstr "Sc.%d "
 
 #: kkeydialog.cpp:312
 msgid "Current key"
-msgstr ""
+msgstr "Bie¿±cy klawisz"
 
 #: kkeydialog.cpp:323
 #, fuzzy
 msgid "&Action"
-msgstr "Sekcja"
+msgstr "&Akcja"
 
 #: kkeydialog.cpp:382
 msgid "&No key"
-msgstr ""
+msgstr "&Brak klawisza"
 
 #: kkeydialog.cpp:390
 #, fuzzy
@@ -621,60 +634,63 @@ msgstr "&Domy¶lne"
 
 #: kkeydialog.cpp:398
 msgid "&Custom key"
-msgstr ""
+msgstr "W³asny skrót"
 
 #: main.cpp:25
 #, fuzzy
 msgid "Usage: "
-msgstr "U¿ycie: %s\n"
+msgstr "U¿ycie:"
 
 #: main.cpp:27
 #, fuzzy
 msgid ""
 " [filename] [siwtches]\n"
 "\n"
-msgstr "[nazwa_pliku]\n"
+msgstr ""
+"[nazwa_pliku][prze³±czniki]\n"
 
 #: main.cpp:28
 #, fuzzy
 msgid ""
 "See KDE and Qt documentation for\n"
 "command line options.\n"
-msgstr "Zagl±dnij do dokumentacji Qt po opis linii polecenia\n"
+msgstr ""
+"Zagl±dnij do dokumentacji KDE i Qt\n"
+"po opis opcji linii poleceñ"
 
 #: main.cpp:30
 msgid "Error on command line"
-msgstr ""
+msgstr "B³±d w linii poleceñ"
 
 #: marklist.cpp:38
 #, fuzzy
 msgid "Mark current page"
-msgstr "Zaznacz &bie¿±c± stronê"
+msgstr "Zaznacz bie¿±c± stronê"
 
 #: marklist.cpp:39
 #, fuzzy
 msgid "Mark all pages"
-msgstr "Zaznacz &wszystkie strony"
+msgstr "Zaznacz wszystkie strony"
 
 #: marklist.cpp:40
 #, fuzzy
 msgid "Mark even pages"
-msgstr "Zaznacz &parzyste strony"
+msgstr "Zaznacz parzyste strony"
 
 #: marklist.cpp:41
 #, fuzzy
 msgid "Mark odd pages"
-msgstr "Zaznacz &nieparzyste strony"
+msgstr "Zaznacz nieparzyste strony"
 
 #: marklist.cpp:42
 #, fuzzy
 msgid "Toggle page marks"
-msgstr "Za&mieñ zaznaczenie stron"
+msgstr "Zamieñ zaznaczenie stron"
 
 #: marklist.cpp:43
 #, fuzzy
 msgid "Remove page marks"
-msgstr "&Usuñ zaznaczenie stron"
+msgstr "Usuñ zaznaczenie stron"
 
 #: messages.cpp:29
 msgid "Ghostscript messages"
@@ -682,34 +698,34 @@ msgstr "Komunikat ghostscript"
 
 #: messages.cpp:56
 msgid "&Clear"
-msgstr ""
+msgstr "&Wyczy¶æ"
 
 #: messages.cpp:59
 msgid "&Dismiss"
-msgstr ""
+msgstr "&Zwolnij"
 
 #: print.cpp:35
 #, fuzzy
 msgid "Printer setup"
-msgstr "Nazwa drukarki"
+msgstr "Ustawienia drukarki"
 
 #: print.cpp:65
 #, fuzzy
 msgid "&Printer name"
-msgstr "Nazwa drukarki"
+msgstr "&Nazwa drukarki"
 
 #: print.cpp:77
 msgid "&Spooler command"
-msgstr ""
+msgstr "Polecenie drukowania"
 
 #: print.cpp:89
 msgid "&Environment variable"
-msgstr ""
+msgstr "&Zmienna ¶rodowiskowa"
 
 #: print.cpp:148
 #, fuzzy
 msgid "Print to file"
-msgstr "B³±d drukowania : lpr"
+msgstr "Drukuj do pliku"
 
 #: print.cpp:153
 msgid "Pages"
@@ -718,38 +734,38 @@ msgstr "Strony"
 #: print.cpp:179
 #, fuzzy
 msgid "&All"
-msgstr "Wszystkie"
+msgstr "&Wszystkie"
 
 #: print.cpp:188
 msgid "&Current"
-msgstr ""
+msgstr "&Bie¿±ca"
 
 #: print.cpp:196
 #, fuzzy
 msgid "&Marked"
-msgstr "Zaznaczone"
+msgstr "&Zaznaczone"
 
 #: print.cpp:205
 msgid "&Range"
-msgstr ""
+msgstr "Za&kres"
 
 #: print.cpp:219
 msgid "to"
-msgstr ""
+msgstr "do"
 
 #: print.cpp:232
 #, fuzzy
 msgid "Print document in re&verse order"
-msgstr "Drukuj dokument"
+msgstr "Drukuj dokument w o&dwrotnej kolejno¶ci"
 
 #: print.cpp:249
 #, fuzzy
 msgid "&Setup ..."
-msgstr "&Otwórz..."
+msgstr "&Ustawienia..."
 
 #: print.cpp:289
 msgid "Range error"
-msgstr ""
+msgstr "B³±d zakresu"
 
 #: print.cpp:290
 msgid ""
@@ -760,6 +776,12 @@ msgid ""
 "range for this part of the document.\n"
 "Check the status bar for this information.\n"
 msgstr ""
+"Zakres stron podanych do wydrukowania\n"
+"nie mo¿e zostaæ poprawnie zrozumiany.\n"
+"\n"
+"Podawany zakres musi nale¿eæ do\n"
+"zakresu stron tego dokumentu.\n"
+"W linii statusowej znajdziesz wiêcej informacji.\n"
 
 #: viewcontrol.cpp:75
 #, fuzzy
@@ -769,21 +791,21 @@ msgstr "Powiêkszenie"
 #: viewcontrol.cpp:85
 #, fuzzy
 msgid "&Media"
-msgstr "Format"
+msgstr "&Media"
 
 #: viewcontrol.cpp:93
 #, fuzzy
 msgid "&Orientation"
-msgstr "Orientacja"
+msgstr "&Orientacja"
 
 #: viewcontrol.cpp:117
 msgid "&Apply"
-msgstr ""
+msgstr "Z&astosuj"
 
 #: zoom.cpp:46
 #, fuzzy
 msgid "&Magnification"
-msgstr "Powiêkszenie"
+msgstr "&Powiêkszenie"
 
 #~ msgid "Print"
 #~ msgstr "Drukuj"
